--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,10 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password: 
-    
+    url: jdbc:postgresql://localhost:5432/financialservicedb
+    username: postgres
+    password: 123
+    driver-class-name: org.postgresql.Driver
   jpa:
-    show-sql: true
-    open-in-view: false
     hibernate:
       ddl-auto: create
-    properties:
-      hibernate:
-        format_sql: true  
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-      settings:
-        trace: false
-        web-allow-others: false
+    show-sql: true
