--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/financialservicedb
+    url: jdbc:postgresql://postgres-container-financialservice:5432/financialservicedb
     username: postgres
-    password: 123
+    password: 123456
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
